Fixes for source list order, ssml text format, login reset password button new alignment (#344)
* 343-342-335

* change border color on login buttons, fix sensitive case sort on source list page

* fix PR comments

--- a/src/themes/authform.scss
+++ b/src/themes/authform.scss
@@ -3,8 +3,9 @@
 // Login buttons
 .neutral:not([disabled]) {
   &.flat, &.toggle {
-    color: $palette-grey-400;
+    color: $palette-grey-700;
     font-size: $button-font-size;
+    border: 1px solid #03A9F4;
   }
 }
 
@@ -37,7 +38,7 @@
 .actions {
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 @keyframes anim {
